# Parallel_and_Distributed_Computing

./: .gitignore  .gitmodules  README.md
hw/final-hw/: report.md
hw/final-hw/fpga-route/: .gitmodules  CMakeLists.txt  COPYRIGHT  Makefile  README.md  config.cfg  hacc-fpga-route-guide.txt  log4cplus.properties  run.sh
hw/final-hw/fpga-route/data/: hweight-tuner.py  wl.py
hw/final-hw/fpga-route/data/wirelength_analyzer/: wa.py
hw/final-hw/fpga-route/results/results_origin/: boom_med_pb_aceroute.phys.wl  boom_soc_v2_aceroute.phys.wl  corescore_1700_aceroute.phys.wl  corescore_500_aceroute.phys.wl  mlcad_d181_lefttwo3rds_aceroute.phys.wl  vtr_mcml_aceroute.phys.wl
hw/final-hw/fpga-route/results/results_par/: boom_med_pb_aceroute.phys.wl  boom_soc_v2_aceroute.phys.wl  corescore_1700_aceroute.phys.wl  corescore_500_aceroute.phys.wl  mlcad_d181_lefttwo3rds_aceroute.phys.wl  vtr_mcml_aceroute.phys.wl
hw/final-hw/fpga-route/results/results_par_2/: boom_med_pb_aceroute.phys.wl  boom_soc_v2_aceroute.phys.wl  corescore_1700_aceroute.phys.wl  corescore_500_aceroute.phys.wl  mlcad_d181_aceroute.phys.wl  vtr_mcml_aceroute.phys.wl
hw/final-hw/fpga-route/src/: ace-route-reader.cc  ace-route-writer.cc  ace-route.cc  ace-route.h  config.cc  config.h  connection.cc  connection.h  device.cc  device.h  intentcode.cc  intentcode.h  main.cc  mapped-file.h  net.cc  net.h  node.cc  node.h  parallel.h  partition.cc  route-fixer.cc  route-fixer.h  routing-graph.cc  routing-graph.h  utils.cc  utils.h
hw/hw1/: 并行与分布式计算导论 作业1.docx
hw/hw2/: report.md
hw/hw3/: a.m  b.m  get_data.ipynb  (+4 more)
(+104 files in other folders)
